css/main.css
/* Font Declarations */

@font-face {
	font-family: 'patua';
	src:url('/fonts/patua.woff2') format('woff2'),
		url('/fonts/patua.woff') format('woff'),
		url('/fonts/patua.ttf') format('truetype');
}

/* Default Elements */

body {
	background-color: #212121;
	font-family: 'patua', sans-serif;
	font-size: 18px;
	line-height: 1.4;
}
hr {
	border-top: 1px solid #888;
}
h1, h2, h3, h4, h5 {
	color: #AAA;
}
p {
	color: #888;
}
a {
	color: #1DE9B6;
}
a:hover, a:active {
	color: #64FFDA;
}
a:visited {
	color: #CCC;
}
li {
	color: #888;
}

/* Body */

.page-header {
	border: none;
	padding-bottom: 0px;
    margin: 40px 0 0;
}
.page-header h1 {
	color: #CCC;
	}
.page-header h1:hover {
	color: #1DE9B6;
	}
.page-header span {
	font-size: 24px;
}
.nav-tabs {
	border: none;
}
.nav-tabs>li>a {
    margin-right: 2px;
    line-height: 1.42857143;
	color: #CCC;
    border: none;
}
.nav-tabs>li.active>a, .nav-tabs>li.active>a:hover, .nav-tabs>li.active>a:focus
.nav-tabs>li>a:hover, .nav-tabs>li>a:focus, .nav>li>a:hover, .nav>li>a:focus {
    color: #1DE9B6;
    background-color: #111;
    border: none;
}
.breadcrumb {
	background-color: #111;
}
.jumbotron {
    background-color: #111;
}
.panel {
	border: none;
}
.panel-body {
	padding: 32px;
	background-color: #333;
}
.panel-body a {
	color: #CCC;
}

/* Previews */

.thumbnail {
	background-color: #111;
	border: 1px solid #111;
}
a.thumbnail:hover, a.thumbnail:focus, a.thumbnail.active {
    border-color: #111;
}
.embed-responsive video {
	border: 5px solid #111;
	border-radius: 4px;
}

/* Buttons */

.btn, .btn:visited, .btn:hover, .btn:focus, .btn:active {
    padding: 8px 12px;
    border: 0 none;
	color: #FFF;
}
.btn-default {
    background: #AAA;
	color: #FFF;
	text-shadow: 0 -1px 0 rgba(0,0,0,.2);
	box-shadow: 0 3px 0 0 #888;
}
.btn-default:hover, .btn-default:focus, .btn-default:active, .btn-default.active {
    background: #CCC;
}
.btn-success {
    background: #15A883;
	color: #FFF;
	text-shadow: 0 -1px 0 rgba(0,0,0,.2);
	box-shadow: 0 3px 0 0 #0F7A5F;
}
.btn-success:hover, .btn-success:focus, .btn-success:active, .btn-success.active {
    background: #00BFA5;
}

